@@ -10,7 +10,7 @@
             "rct2.scenery_small.tic",
             "fidwell.scenery_small.tic",
             "rct2.scenery_small.tlc",
-            "$DAT:00000002|GWTRLC  ",
+            "fidwell.scenery_small.tlc",
             "rct2.scenery_small.tmc",
             "$DAT:00000002|GWTRMC  ",
             "rct2.scenery_small.tmp",
