@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tlc",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 21,
+        "removalPrice": 10,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 100,
+        "isTree": true,
+        "shape": "1/4",
+        "hasPrimaryColour": true,
+        "SMALL_SCENERY_FLAG_VOFFSET_CENTRE": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -16, "y": -100 },
+      { "path": "images/1.png", "x": -16, "y": -100 },
+      { "path": "images/2.png", "x": -16, "y": -96 },
+      { "path": "images/3.png", "x": -16, "y": -95 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Lawson Cypress Tree",
+            "fr-FR": "Cyprès de Lawson",
+            "de-DE": "Lawson-Zypresse",
+            "es-ES": "Ciprés de Lawson",
+            "it-IT": "Cipresso di Lawson",
+            "nl-NL": "Californische cipres",
+            "sv-SE": "Lawson-cypress",
+            "ko-KR": "로슨 노송나무",
+            "zh-CN": "罗生扁柏树",
+            "zh-TW": "羅生扁柏樹",
+            "pt-BR": "Árvore Cipreste-de-Lawson",
+            "cs-CZ": "Lawsonův cypřiš",
+            "ja-JP": "ローソン糸杉",
+            "pl-PL": "Lawsonia",
+            "ru-RU": "Лоусонский кипарис",
+            "eo-ZZ": "Lawson-Cipresoarbo",
+            "ca-ES": "Xiprer de Lawson",
+            "fi-FI": "Lawsoninsypressi"
+        }
+    }
+}
